src/components/Works/Works.scss
.works-list{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .work-item{
    background-color: #9dcbdc ;
    /* #a7d5d2; */
    font-family: 'Sen', sans-serif;
    font-weight: 400;
    color: black;
    border-radius: 10%;
    width: 15em;
    height: 15em;
    margin: 2em 2em ;
    padding: 2em 2em;
    
  }
  
  
  .App {
    text-align: center;
  }
  
  .App-logo {
    height: 40vmin;
    pointer-events: none;
  }
  
  @media (prefers-reduced-motion: no-preference) {
    .App-logo {
      animation: App-logo-spin infinite 20s linear;
    }
  }
  
  .App-header {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
  }
  
  .App-link {
    color: #61dafb;
  }
  
  @keyframes App-logo-spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
  
  

